--- a/01.引论.md
+++ b/01.引论.md
@@ -21,7 +21,7 @@
 
 <img src="./01.引论/QQ_1735029549536.png" alt="QQ_1735029549536" style="zoom:33%;" />
 
-## 抽象(Abstraction)
+### 抽象(Abstraction)
 
 - 定义：
 
@@ -36,7 +36,7 @@
   - 形式文法
   - ...
 
-## 自动化
+### 自动化
 
 - 定义
 
@@ -51,7 +51,7 @@
   - LR 分析
   - ...
 
-## 分解
+### 分解
 
 - 分解 (Decomposition)
   - 将大规模的复杂问题分解成若干个较小规模的 、更简单的问题加以解决
@@ -61,7 +61,7 @@
 
 <img src="./01.引论/QQ_1735030469778.png" alt="QQ_1735030469778" style="zoom:33%;" />
 
-## 递归
+### 递归
 
 - 定义
   - 问题的解决又依赖于类似问题的解决，只不过后者的复杂程度或规模较原来的问题更小
@@ -73,7 +73,7 @@
   - 语法制导翻译
   - ...
 
-## 权衡 ( 折中 )
+### 权衡 ( 折中 )
 
 - 定义
   - 理论可实现 vs. 实际可实现
@@ -83,6 +83,153 @@
   - 用上下文无关文法来描述和处理高级程序设计 语言
   - 优化措施的选择
   - ...
+
+## 编译过程
+
+<img src="./01.引论/QQ_1735032108616.png" alt="QQ_1735032108616" style="zoom:50%;" />
+
+### 词法分析
+
+- 任务: 输入源程序，对构成源程序的字符 串进行扫描和分解，识别出一个个单词符号
+- 依循的原则:构词规则
+- 描述工具:有限自动机
+
+```
+FOR      I      :=     1      TO     100     DO
+基本字   标识符  赋值号  整常数  基本字  整常数  基本字
+```
+
+### 语法分析
+
+- 任务:在词法分析的基础上，根据语言的语法规则把单词符号串分解成各类语法单位 ( 语法范畴 )
+
+- 依循的原则:语法规则
+- 描述工具:上下文无关文法
+
+<img src="./01.引论/QQ_1735044524755.png" alt="QQ_1735044524755" style="zoom:33%;" />
+
+### 中间代码产生
+
+- 任务:对各类不同语法范畴按语言的语义进行初步翻译
+
+- 依循的原则:语义规则
+- 中间代码:三元式，四元式，树
+
+<img src="./01.引论/QQ_1735044566066.png" alt="QQ_1735044566066" style="zoom:33%;" />
+
+### 优化
+
+- 任务:对于前阶段产生的中间代码进行 加工变换，以期在最后阶段产生更高效 的目标代码
+- 依循的原则:程序的等价变换规则
+
+优化前：
+
+<img src="./01.引论/QQ_1735044616862.png" alt="QQ_1735044616862" style="zoom: 33%;" />
+
+优化后：
+
+<img src="./01.引论/QQ_1735044643591.png" alt="QQ_1735044643591" style="zoom:33%;" />
+
+### 目标代码产生
+
+- 任务 : 把中间代码变换成特定机器上的目标代码
+- 依赖于硬件系统结构和机器指令的含义
+- 目标代码三种形式
+- 绝对指令代码 : 
+  - 可直接运行
+  - 可重新定位指令代码 : 需要连接装配
+  - 汇编指令代码 : 需要进行汇编
+
+<img src="./01.引论/QQ_1735044748877.png" alt="QQ_1735044748877" style="zoom:33%;" />
+
+<img src="./01.引论/QQ_1735044825836.png" alt="QQ_1735044825836" style="zoom:33%;" />
+
+## 编译程序的结构
+
+- 编译程序总框  表格与表格管理
+- 出错处理
+- 遍
+- 编译前端与后端
+
+### 总框
+
+<img src="./01.引论/QQ_1735046957419.png" alt="QQ_1735046957419" style="zoom:33%;" />
+
+### 表格和表格管理
+
+- 常见的表格：符号名表，常数表，标号表，入口名表，过程引用表
+
+- 格式
+
+```
+[ 名字 | 信息 ]
+```
+
+### 出错处理
+
+- 出错处理程序
+  - 发现源程序中的错误，把有关错误信息报告给用户
+- 语法错误
+  - 源程序中不符合语法(或词法)规则的错误  非法字符、括号不匹配、缺少 ;、 ...
+
+- 语义错误
+  - 源程序中不符合语义规则的错误
+  - 说明错误、作用域错误、类型不一致、 ...
+
+### 遍 (pass)
+
+- 所谓 " 遍 " ， 就是对源程序或源程序的中间表示从头到尾扫描一次
+
+- 阶段与遍是不同的概念
+  - 一遍可以由若干段组成
+  - 一个阶段也可以分若干遍来完成
+
+### 编译前端与后端
+
+<img src="./01.引论/QQ_1735047101990.png" alt="QQ_1735047101990" style="zoom:33%;" />
+
+- 编译前端
+  - 与源语言有关，如词法分析，语法分析，语义分析与 中间代码产生，与机器无关的优化
+- 编译后端
+  - 与目标机有关，与目标机有关的优化，目标代码产生
+
+- 带来的好处
+  - 程序逻辑结构清晰
+  - 优化更充分，有利于移植
+
+## 编译程序生成
+
+- 以汇编语言和机器语言为工具
+  - 优点 : 可以针对具体的机器，充分发挥计 算机的系统功能;生成的程序效率高
+  - 缺点 : 程序难读、难写、易出错、难维护 、生产的效率低
+
+- 高级语言书写: 利用已有的某种语言的编译程序实现另一语言 的编译程序
+
+<img src="./01.引论/QQ_1735048098270-5048102.png" alt="QQ_1735048098270" style="zoom:33%;" />
+
+<img src="./01.引论/QQ_1735048128551.png" alt="QQ_1735048128551" style="zoom:33%;" />
+
+- 移植方法: 把一种机器上的编译程序移植到另一种机器上
+
+<img src="./01.引论/QQ_1735048152842.png" alt="QQ_1735048152842" style="zoom:33%;" />
+
+- 自展技术
+
+<img src="./01.引论/QQ_1735048175769.png" alt="QQ_1735048175769" style="zoom:33%;" />
+
+- 编译程序自动产生: 编译程序 - 编译程序，编译程序书写系统
+
+<img src="./01.引论/QQ_1735048196866.png" alt="QQ_1735048196866" style="zoom:33%;" />
+
+
+
+
+
+
+
+
+
+
 
 
 
