上下文无关文法

--- a/02.2程序语言的一般特性.md
+++ b/02.2程序语言的一般特性.md
@@ -124,6 +124,13 @@ X*Y     -A      P↑
   - 名字左值:该名字代表的那个单元 ( 地址 ) 称 为该名字的左值 ( 所代表的存贮单元的地址 )
   - 右值:一个名字的值称为该名字的右值 ( 所代 表的存贮单元的内容 )
 - 说明语句：定义各种不同数据类型的变量或运算，定义名字的性质
+- 控制语句
+  - 无条件控制语句：`goto L`
+  - 条件语句：`if-else`
+  - 循环语句
+  - 过程调用语句：`call P(x1,x2,..,xn)`
+  - 返回语句：`return`
+
 
 ### 简单句和复合句
 
