--- a/03.1词法分析器的设计.md
+++ b/03.1词法分析器的设计.md
@@ -56,6 +56,69 @@
 
 <img src="./03.1词法分析器的设计/QQ_1737038491791.png" alt="QQ_1737038491791" style="zoom:33%;" />
 
+> 一分为二，为啥就能解决问题呢？
+>
+> 简单回答：一部分在执行的时候，另一部分就可以同时获取数据，类似“并行”
+>
+> 下面是GPT - o1给的例子用于理解
+>
+> ## 步骤演示
+>
+> ### 第一步：先装载“半区 A”
+>
+> 1. **分配一块连续空间 [0..9]**，前 5 个字节是**半区 A**，后 5 个字节是**半区 B**。
+>
+> 2. 半区 A 先读入
+>
+>    前 5 个字符：
+>
+>    ```
+>    缓冲区（索引）: 0    1    2    3    4   | 5    6    7    8    9
+>    半区            [ A              ]     | [ B              ]
+>    装载内容       'W'  'h'  'a'  't'  'A' |  ???  ???  ???  ???  ???
+>    ```
+>
+> 3. **指针初始化**：`start = 0`, `forward = 0`（都指向 'W'）。
+>
+> 此时我们还没有去读**半区 B**，它是空闲的。
+>
+> ### 第二步：`forward` 开始向后扫描
+>
+> 1. `forward` 从索引 0 开始，继续往右看，直到确定了一个 token 或者抵达半区 A 的末尾。
+> 2. 假设当 `forward` 到了索引 4（字符 'A'）还没能断定 token 完整结束，需要继续读下一个字符，但是下一个字符已经不在半区 A 里了。
+>
+> ### 第三步：装载“半区 B”
+>
+> 1. 因为 `forward` 即将越过半区 A 的末尾（索引 4 再往右就是 5），所以我们对半区 B进行读入：
+>
+>    ```
+>    继续从输入串 "WhatALongWord AnotherOne AnotherLongerWord" 里
+>    读取下 5 个字符到半区 B。
+>    ```
+>
+> 2. 如果前 5 个字符是 `WhatA`（为了演示，假设 `A` 放到了第 4 号索引），那么半区 B 的 5 个字符就是 `LongW`：
+>
+>    ```
+>    缓冲区: 
+>    索引:      0     1     2     3     4   |  5     6     7     8     9
+>    半区       [   A                ]       |  [         B           ]
+>    内容       'W'   'h'   'a'   't'   'A' |  'L'   'o'   'n'   'g'   'W'
+>    指针       start=0                forward=4(即将移动到5)
+>    ```
+>
+> 3. 现在，当 `forward` 向右跨过索引 4，就能继续在索引 5 读到 'L'，索引 6 读到 'o'，等等，不会中断。
+>
+> ### 第四步：识别到一个 token
+>
+> 1. 假设在读到索引 9（字符 'W'）时，确定前面的一串字符可以构成一个 token，比如 “WhatALongW”。
+> 2. 这时词法分析器就可以把 token 返回给语法分析器，或者说在内部记录下这个 token。
+>
+> ### 第五步：为下一次扫描做准备
+>
+> 1. 如果我们还需要继续往后读取新的字符，就要**再次**填充那个已经用完或正在空闲的半区。
+> 2. 比方说，如果现在 `start` 和 `forward` 已经越过了半区 A，那么就可以让**半区 A**重新装载**输入串下一个部分**（比如 “ord AnotherOne” 的头几个字符）。
+> 3. 如此一来，扫描指针就能继续顺利向后推进。
+
 单词符号的识别 : 超前搜索
 
 <img src="./03.1词法分析器的设计/QQ_1737038515251.png" alt="QQ_1737038515251" style="zoom:33%;" />
@@ -74,6 +137,7 @@
   - 结点代表状态，用圆圈表示
   - 状态之间用箭弧连结，箭弧上的标记 ( 字符 ) 代表射出结状态下可能出现的输入字符或字符类
   - 一张转换图只包含有限个状态， 其中有一个为初态，至少要有一个终态
+  - `*`：退掉最后一个字符
 
 <img src="./03.1词法分析器的设计/QQ_1737038637438.png" alt="QQ_1737038637438" style="zoom:33%;" />
 
